// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm with one expense 1`] = `
<div>
  <div>
    <h1>
      Viewing 
      1
       
      expense
      , totalling: 
      $2.35
    </h1>
  </div>
</div>
`;

exports[`should render ExpenseForm with two expenses 1`] = `
<div>
  <div>
    <h1>
      Viewing 
      23
       
      expenses
      , totalling: 
      $2,456,783.45
    </h1>
  </div>
</div>
`;
